# VectorHawk

./: .gitignore  README.md  main.py  pyproject.toml
scripts/: setup_es.sh
tests/: test_config.py  test_storage.py
vectorhawk/: __init__.py
vectorhawk/core/: __init__.py  config.py  exceptions.py  logger.py
vectorhawk/data/: __init__.py  ingestion.py  processing_pipeline.py  storage.py
