[tool.poetry]
name = "vectorhawk"
version = "0.1.0"
description = ""
authors = ["Yousinator <y.omusabeh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
elasticsearch = "^8.15.1"
transformers = "^4.45.2"
sentence-transformers = "^3.2.0"
faiss-cpu = "^1.9.0"
fastapi = "^0.115.2"
pydantic = "^2.9.2"
uvicorn = "^0.32.0"
llama-index = "^0.11.19"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
